--- a/templates/add_new_vehicle.html
+++ b/templates/add_new_vehicle.html
@@ -4,7 +4,7 @@
     <h3>Add New Vehicle</h3>
 
         <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
-            <form class="justify-content-center" method="POST" action="{{ url_for('add_new_vehicle') }}">
+            <form class="justify-content-center" method="POST" action="{{ url_for('add_new_vehicle') }}" enctype="multipart/form-data">
                 <!-- vehicle type -->
                 <div class="row"></div>
                     <div class="mb-3 col-12">
@@ -91,6 +91,29 @@
                         <i class="fa-solid fa-car-side"></i>
                     </div>
                 </div>
+                
+                    <div class="row justify-content-center">
+                        <div class="col-lg-12 text-center">
+                           
+                                <h4>Upload A Photo Of Your Vehicle</h4>
+                    
+                        </div>
+                        <div class="col-lg-6 text-center">
+                           
+                           
+                                <div class="form-group">
+                                    <label for="image">Choose Image</label>
+                                    <input type="file" class="form-control-file" id="image" name="image" accept="image/*" required />
+                                </div>
+                                <div class="form-group">
+                                    <label for="description">Image Description</label>
+                                    <textarea class="form-control" id="description" name="description" rows="4" required></textarea>
+                                </div>
+                         
+                        </div>
+                    </div>
+               
+             
                 <!-- submit button -->
                 <div class="row">
                     <div class="col-12">
