--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,10 @@
         {% for vehicle in vehicles %}
             {% if vehicle.show_my_vehicle == "yes" %}
                 <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
-                    <div class="card-body">
+                    <img class="card-img-top" src="{{ url_for('static', filename='uploads/' ) }}">
+                    <div class="card-body"> 
+                        <p class="card-text">{{ vehicle.filename }}</p>
+                        <p class="card-text">{{ vehicle.description }}</p>
                         <h4 class="card-title text-shadow">{{ vehicle.make }}</h4>
                         <h5 class="card-subtitle mb-2 text-body-secondary">{{ vehicle.model }}</h5>
                         <p class="card-text">Engine Capacity: {{ vehicle.capacity }}</p>
