--- a/templates/edit_vehicle.html
+++ b/templates/edit_vehicle.html
@@ -4,7 +4,7 @@
     <h3>Edit Vehicle</h3>
 
         <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
-            <form class="justify-content-center" method="POST" action="{{ url_for('edit_vehicle', vehicle_id=vehicle._id) }}">
+            <form class="justify-content-center" method="POST" action="{{ url_for('edit_vehicle', vehicle_id=vehicle._id) }}" enctype="multipart/form-data">
                 <!-- vehicle type -->
                 <div class="row"></div>
                     <div class="mb-3 col-12">
@@ -118,6 +118,22 @@
                             <input class="form-check-input" type="checkbox" role="switch" id="show_my_vehicle" name="show_my_vehicle">
                         {% endif %}
                         <i class="fa-solid fa-car-side"></i>
+                    </div>
+                </div>
+                <!-- upload an a photo of vehicle -->
+                <div class="row justify-content-center">
+                    <div class="col-lg-12 text-center">
+                        <h4>Change The Photo Of Your Vehicle</h4>
+                    </div>
+                    <div class="col-lg-6 text-center">
+                        <div class="form-group">
+                            <label for="image">Choose Image</label>
+                            <input type="file" class="form-control-file" id="image" name="image" accept="image/*" required />
+                        </div>
+                        <div class="form-group">
+                            <label for="description">Image Description</label>
+                            <textarea class="form-control" id="description" name="description" rows="4" required></textarea>
+                        </div>
                     </div>
                 </div>
                 <!-- submit button -->
