--- a/templates/add_new_vehicle.html
+++ b/templates/add_new_vehicle.html
@@ -24,7 +24,7 @@
                         <i class="fa-solid fa-pen"></i>
                         <label for="make" class="form-label">Vehicle Make</label>
                         <input type="text" class="form-control" id="make" name="make"
-                        minlength="2" maxlength="25" placeholder="Enter make of vehicle..." pattern="^[a-zA-Z0-9]{2,25}$" required>
+                        minlength="2" maxlength="25" placeholder="Enter make of vehicle..." pattern="^[a-zA-Z0-9\s]{2,25}$" required>
                     </div>
                 </div>
                 <!-- vehicle model -->
@@ -33,7 +33,7 @@
                         <i class="fa-solid fa-pen"></i>
                         <label for="model" class="form-label">Model</label>
                         <input type="text" class="form-control" id="model" name="model"
-                        placeholder="Enter model..." minlength="1" maxlength="25" pattern="^[a-zA-Z0-9]{1,25}$" required>
+                        placeholder="Enter model..." minlength="1" maxlength="25" pattern="^[a-zA-Z0-9\s]{1,25}$" required>
                     </div>
                 </div>
                 <!-- engine capacity -->
@@ -42,7 +42,7 @@
                         <i class="fa-solid fa-pen"></i>
                         <label for="capacity" class="form-label">Engine Capacity (e.g. 1.8)</label>
                         <input type="number" class="form-control" id="capacity" name="capacity"
-                        min="1" max="9999" step="0.01" value="" required>
+                        min="0.1" max="9999" step="0.1" value="" required>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="litre_cc" id="litre_cc" value="Litre" checked>
@@ -99,11 +99,11 @@
                         <div class="col-lg-6 text-center">
                             <div class="form-group">
                                 <label for="image">Choose Image</label>
-                                <input type="file" class="form-control-file" id="image" name="image" accept="image/*"/>
+                                <input type="file" class="form-control-file" id="image" name="image" accept="image/*" required/>
                             </div>
                             <div class="form-group">
                                 <label for="description">Image Description</label>
-                                <textarea class="form-control" id="description" name="description" rows="4" max="250" pattern="^[a-zA-Z0-9]$"></textarea>
+                                <textarea class="form-control" id="description" name="description" rows="4" max="250" required></textarea>
                             </div>
                         </div>
                     </div>
