--- a/templates/add_new_vehicle.html
+++ b/templates/add_new_vehicle.html
@@ -91,20 +91,17 @@
                         <i class="fa-solid fa-car-side"></i>
                     </div>
                 </div>
-                <!-- upload an a photo of vehicle -->
-                    <div class="row justify-content-center">
-                        <div class="col-lg-12 text-center">
-                            <h4>Upload A Photo Of Your Vehicle</h4>
+                <!-- upload a photo of vehicle -->
+                    <div class="row">
+                        <div class="form-group">
+                            <i class="fa-regular fa-image"></i>
+                            <label for="image">Add a photo of your vehicle</label>
+                            <input type="file" class="form-control-file" id="image" name="image" accept="image/*" required/>
                         </div>
-                        <div class="col-lg-6 text-center">
-                            <div class="form-group">
-                                <label for="image">Choose Image</label>
-                                <input type="file" class="form-control-file" id="image" name="image" accept="image/*" required/>
-                            </div>
-                            <div class="form-group">
-                                <label for="description">Image Description</label>
-                                <textarea class="form-control" id="description" name="description" rows="4" max="250" required></textarea>
-                            </div>
+                        <div class="form-group">
+                            <i class="fa-solid fa-pen"></i>
+                            <label for="description">Image Description</label>
+                            <textarea class="form-control" id="description" name="description" rows="2" max="25" required></textarea>
                         </div>
                     </div>
                 <!-- submit button -->
