--- a/templates/vehicle_types.html
+++ b/templates/vehicle_types.html
@@ -21,12 +21,12 @@
                         <a class="btn add-edit-save-btn" href="{{ url_for('edit_vehicle_type', vehicle_type_id=vehicle_type._id) }}" role="button">Edit <i
                                 class="fa-solid fa-pen"></i></a>
                         <!-- delete button -->
-                        <button type="button" class="btn cancel-delete-btn btn-sm" data-bs-toggle="modal" data-bs-target="#deleteModal">
+                        <button type="button" class="btn cancel-delete-btn btn-sm" data-bs-toggle="modal" data-bs-target="#deleteModal{{ vehicle_type._id }}">
                             Delete <i class="fa-regular fa-circle-xmark"></i>
                         </button>
                         
                         <!-- Modal -->
-                        <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModal" aria-hidden="true">
+                        <div class="modal fade" id="deleteModal{{ vehicle_type._id }}" tabindex="-1" aria-labelledby="deleteModal" aria-hidden="true">
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
